Refactor layout structure to include header, footer, and menu components

--- a/src/app/core/routes/layout/layout.html
+++ b/src/app/core/routes/layout/layout.html
@@ -1,2 +1,13 @@
-<p>layout works!</p>
-<router-outlet/>
+<header>
+    <app-layout-header></app-layout-header>
+</header>
+<aside>
+    <app-layout-menu></app-layout-menu>
+</aside>
+<main>
+    <router-outlet />
+
+</main>
+<footer>
+    <app-layout-footer></app-layout-footer>
+</footer>
