--- a/src/app/core/layout/layout.html
+++ b/src/app/core/layout/layout.html
@@ -5,8 +5,7 @@
     <app-layout-menu></app-layout-menu>
 </aside>
 <main>
-    <router-outlet />
-
+    <router-outlet></router-outlet>
 </main>
 <footer>
     <app-layout-footer></app-layout-footer>
