--- a/src/app/modules/authentication/authentication.html
+++ b/src/app/modules/authentication/authentication.html
@@ -1,1 +1,4 @@
-<p>authentication works!</p>
+<section>
+    <img src="../../../assets/images/logo/logo.png" alt="SPORTLY">
+    <router-outlet></router-outlet>
+</section>
