--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,35 +5,76 @@
 // Learn more about theming and how to use it for your application's
 // custom components at https://material.angular.dev/guide/theming
 @use '@angular/material' as mat;
+@use 'palette.scss';
+
+$font-family: 'Titillium Web', 'Helvetica Neue', 'Arial', sans-serif;
+
+$theme-config: (
+  color: (
+    primary: palette.$primary-palette,
+    theme-type: light,
+  ),
+  typography: (
+    brand-family: $font-family,
+    plain-family: $font-family,
+    bold-weight: 700,
+    medium-weight: 600,
+    regular-weight: 400,
+  ),
+  density: (
+    scale: 0,
+  ),
+);
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 
 html {
-  @include mat.theme((
-    color: (
-      primary: mat.$azure-palette,
-      tertiary: mat.$blue-palette,
-    ),
-    typography: Roboto,
-    density: 0,
-  ));
+  color-scheme: light;
+  height: 100%;
+  font-family: $font-family;
+  line-height: 1.5;
+
+  @include mat.theme($theme-config);
 }
 
 body {
-  // Default the application to a light color theme. This can be changed to
-  // `dark` to enable the dark color theme, or to `light dark` to defer to the
-  // user's system settings.
-  color-scheme: light;
-
-  // Set a default background, font and text colors for the application using
-  // Angular Material's system-level CSS variables. Learn more about these
-  // variables at https://material.angular.dev/guide/system-variables
-  background-color: var(--mat-sys-surface);
+  background: var(--mat-sys-surface);
   color: var(--mat-sys-on-surface);
-  font: var(--mat-sys-body-medium);
-
-  // Reset the user agent margin.
+  height: 100%;
   margin: 0;
 }
-/* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+button {
+  background: unset;
+  border: unset;
+  font-family: $font-family;
+  cursor: pointer;
+
+  &[disabled] {
+    cursor: not-allowed;
+  }
+}
+
+input {
+  font-family: $font-family;
+}
+
+table {
+  th,
+  td {
+    max-width: 1px;
+    text-overflow: ellipsis;
+    white-space: pre;
+
+    &.actions {
+      max-width: unset;
+      text-overflow: unset;
+      white-space: normal;
+      width: 1px;
+    }
+  }
+}
