feat: enhance authentication module and improve routing logic

--- a/src/app/modules/authentication/authentication-log-in/authentication-log-in.html
+++ b/src/app/modules/authentication/authentication-log-in/authentication-log-in.html
@@ -4,12 +4,14 @@
 
     <mat-form-field appearance="outline">
         <mat-label>Email</mat-label>
-        <input matInput type="text" formControlName="email" autocomplete="email" />
+        <input matInput type="text" formControlName="email" autocomplete="email" id="email" />
         <mat-icon matSuffix>email</mat-icon>
         <mat-hint>Obligatorio</mat-hint>
-        <mat-error *ngIf="form.get('email')?.hasError('required')">
+        @if (form.get('email')?.hasError('required')) {
+        <mat-error>
             El email es obligatorio
         </mat-error>
+        }
     </mat-form-field>
 
     <mat-form-field appearance="outline">
@@ -17,9 +19,11 @@
         <input matInput type="password" formControlName="password" autocomplete="current-password" />
         <mat-icon matSuffix>lock</mat-icon>
         <mat-hint>Obligatorio</mat-hint>
-        <mat-error *ngIf="form.get('password')?.hasError('required')">
+        @if (form.get('password')?.hasError('required')) {
+        <mat-error>
             La contraseña es obligatoria
         </mat-error>
+        }
     </mat-form-field>
 
     <button mat-raised-button type="submit">
