--- a/src/app/modules/authentication/authentication.html
+++ b/src/app/modules/authentication/authentication.html
@@ -1,4 +1,4 @@
 <section>
-    <img src="../../../assets/images/logo/logo.png" alt="SPORTLY">
+<img src="../../../assets/images/logo/logo.png" alt="Sportly">
     <router-outlet></router-outlet>
 </section>
