--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,7 @@
 // custom components at https://material.angular.dev/guide/theming
 @use '@angular/material' as mat;
 @use 'palette.scss';
+@use 'theme.scss';
 
 $font-family: 'Titillium Web', 'Helvetica Neue', 'Arial', sans-serif;
 
